# pengupop-maemo5

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  bin2c.c  common.h  config.status  configure  configure.in  error.c  error.h  font.c  gameid.c  image.c  main.c  missing  osx-mkbundle.sh  osx-mkdiskimage.sh  packet.h  pengupop.desktop  replace_bin2c.c  singleplayer.c  singleplayer_levels.c  sound.c  sound.h
.deps/: bin2c.Po  error.Po  font.Po  gameid.Po  image.Po  main.Po  singleplayer.Po  sound.Po
autom4te.cache/: output.0  requests  traces.0  traces.1
